force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/PS_ASU_SP_CLASS_V__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1DAAWcOwxGr3qGNm9V5rEPjj3N2fqQGm7SwwiiVhnw6I/edit</description>
    <externalDataSource>crm_student_profile_odata</externalDataSource>
    <externalName>PS_ASU_SP_CLASS_V</externalName>
    <label>Class (external)</label>
    <pluralLabel>Class (external)</pluralLabel>
</CustomObject>