force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/ASU_SCH_DATES__c.field-meta.xml
<CustomField>
    <fullName>ASU_SCH_DATES__c</fullName>
    <description>Data sourced from PS_CLASS_MTG_PAT.START_DT, END_DT</description>
    <externalDeveloperName>ASU_SCH_DATES</externalDeveloperName>
    <label>Dates</label>
    <type>TextArea</type>
</CustomField>