force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/AUDIT_GRADE_BASIS__c.field-meta.xml
<CustomField>
    <fullName>AUDIT_GRADE_BASIS__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Data sourced from PS_STDNT_ENRL.AUDIT_GRADE_BASIS
Perm Student 360 - Read access</description>
    <externalDeveloperName>AUDIT_GRADE_BASIS</externalDeveloperName>
    <label>Audited Class Flag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>