force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/CATALOG_NBR__c.field-meta.xml
<CustomField>
    <fullName>CATALOG_NBR__c</fullName>
    <description>Data sourced from PS_CLASS_TBL.CATALOG_NBR</description>
    <externalDeveloperName>CATALOG_NBR</externalDeveloperName>
    <label>Catalog Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>