force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/CLASS_DESCR__c.field-meta.xml
<CustomField>
    <fullName>CLASS_DESCR__c</fullName>
    <description>Data sourced from PS_CLASS_TBL.DESCR</description>
    <externalDeveloperName>CLASS_DESCR</externalDeveloperName>
    <label>Title</label>
    <length>55</length>
    <type>Text</type>
</CustomField>