force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/CLASS_NBR__c.field-meta.xml
<CustomField>
    <fullName>CLASS_NBR__c</fullName>
    <description>Data sourced from PS_STDNT_ENRL.CLASS_NBR</description>
    <externalDeveloperName>CLASS_NBR</externalDeveloperName>
    <label>Class Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>