force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/CONFIRMATION_OF_PARTICIPATION__c.field-meta.xml
<CustomField>
    <fullName>CONFIRMATION_OF_PARTICIPATION__c</fullName>
    <businessOwnerGroup>Data_Owner_FA_Scholarship_Services</businessOwnerGroup>
    <description>Confirmation of Participation for each class record.
Introduced in SFE-44967.</description>
    <externalDeveloperName>ASU_FA_COP_FLG</externalDeveloperName>
    <label>Confirmation of Participation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>