force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/CRSE_GRADE_INPUT__c.field-meta.xml
<CustomField>
    <fullName>CRSE_GRADE_INPUT__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Data sourced from PS_STDNT_ENRL.CRSE_GRADE_INPUT
Perm Student 360 Read access</description>
    <externalDeveloperName>CRSE_GRADE_INPUT</externalDeveloperName>
    <label>Academic Integrity Grade</label>
    <length>4</length>
    <type>Text</type>
</CustomField>