force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/CRSE_GRADE_OFF__c.field-meta.xml
<CustomField>
    <fullName>CRSE_GRADE_OFF__c</fullName>
    <description>Data sourced from PS_STDNT_ENRL.CRSE_GRADE_OFF</description>
    <externalDeveloperName>CRSE_GRADE_OFF</externalDeveloperName>
    <label>Official Course Grade</label>
    <length>4</length>
    <type>Text</type>
</CustomField>