force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/CRSE_ID__c.field-meta.xml
<CustomField>
    <fullName>CRSE_ID__c</fullName>
    <description>Data sourced from PS_CLASS_TBL.CRSE_ID</description>
    <externalDeveloperName>CRSE_ID</externalDeveloperName>
    <label>Course Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>