force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/CUR_GPA__c.field-meta.xml
<CustomField>
    <fullName>CUR_GPA__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_TERM.CUR_GPA</description>
    <externalDeveloperName>CUR_GPA</externalDeveloperName>
    <label>Current GPA</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>