force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/EARN_CREDIT__c.field-meta.xml
<CustomField>
    <fullName>EARN_CREDIT__c</fullName>
    <description>Data sourced from PS_STDNT_ENRL.EARN_CREDIT</description>
    <externalDeveloperName>EARN_CREDIT</externalDeveloperName>
    <label>Earned Credit</label>
    <length>1</length>
    <type>Text</type>
</CustomField>