force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/ENRL_STATUS_REASON__c.field-meta.xml
<CustomField>
    <fullName>ENRL_STATUS_REASON__c</fullName>
    <description>Data sourced from PS_STDNT_ENRL.ENRL_STATUS_REASON</description>
    <externalDeveloperName>ENRL_STATUS_REASON</externalDeveloperName>
    <label>Status Reason</label>
    <length>6</length>
    <type>Text</type>
</CustomField>