force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/FT_FULL_NAME__c.field-meta.xml
<CustomField>
    <fullName>FT_FULL_NAME__c</fullName>
    <description>Data sourced from PS_NAMES_VW.NAME</description>
    <externalDeveloperName>FT_FULL_NAME</externalDeveloperName>
    <label>Instructor</label>
    <type>TextArea</type>
</CustomField>