force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/SCH_DAILY_TIME__c.field-meta.xml
<CustomField>
    <fullName>SCH_DAILY_TIME__c</fullName>
    <description>Data sourced from PS_CLASS_MTG_PAT.MEETING_TIME_START, MEETING_TIME_END</description>
    <externalDeveloperName>SCH_DAILY_TIME</externalDeveloperName>
    <label>Class Time</label>
    <type>TextArea</type>
</CustomField>