force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/SCH_HTML_DAY1__c.field-meta.xml
<CustomField>
    <fullName>SCH_HTML_DAY1__c</fullName>
    <description>Data sourced from PS_CLASS_MTG_PAT.SUN,MON,TUES,WED,THURS,FRI,SAT</description>
    <externalDeveloperName>SCH_HTML_DAY1</externalDeveloperName>
    <label>Class Day</label>
    <length>20</length>
    <type>Text</type>
</CustomField>