force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/SSR_CLSTOPIC_DESCR__c.field-meta.xml
<CustomField>
    <fullName>SSR_CLSTOPIC_DESCR__c</fullName>
    <description>Data sourced from PS_CRSE_TOPICS.DESCRFORMAL</description>
    <externalDeveloperName>SSR_CLSTOPIC_DESCR</externalDeveloperName>
    <label>Course Description</label>
    <length>55</length>
    <type>Text</type>
</CustomField>