force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/SSR_MTG_LOC_LONG__c.field-meta.xml
<CustomField>
    <fullName>SSR_MTG_LOC_LONG__c</fullName>
    <description>Data sourced from PS_CLASS_TBL, PS_FACILITY_TBL.LOCATION</description>
    <externalDeveloperName>SSR_MTG_LOC_LONG</externalDeveloperName>
    <label>Campus</label>
    <length>40</length>
    <type>Text</type>
</CustomField>