force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/STDNT_ENRL_STATUS__c.field-meta.xml
<CustomField>
    <fullName>STDNT_ENRL_STATUS__c</fullName>
    <description>Data sourced from PS_STDNT_ENRL.STDNT_ENRL_STATUS</description>
    <externalDeveloperName>STDNT_ENRL_STATUS</externalDeveloperName>
    <label>Enrollment Status</label>
    <length>4</length>
    <type>Text</type>
</CustomField>