force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data sourced from PS_STDNT_ENRL.STRM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Class (external)</relationshipLabel>
    <relationshipName>Class_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>