force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/SUBJECT__c.field-meta.xml
<CustomField>
    <fullName>SUBJECT__c</fullName>
    <description>Data sourced from PS_CLASS_TBL.SUBJECT</description>
    <externalDeveloperName>SUBJECT</externalDeveloperName>
    <label>Subject</label>
    <length>9</length>
    <type>Text</type>
</CustomField>