force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/TERM_DESCR30__c.field-meta.xml
<CustomField>
    <fullName>TERM_DESCR30__c</fullName>
    <description>Data sourced from PS_TERM_TBL.DESCRSHORT</description>
    <externalDeveloperName>TERM_DESCR30</externalDeveloperName>
    <label>Term Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>