force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/UNT_TAKEN__c.field-meta.xml
<CustomField>
    <fullName>UNT_TAKEN__c</fullName>
    <description>Data sourced from PS_STDNT_ENRL.UNT_TAKEN</description>
    <externalDeveloperName>UNT_TAKEN</externalDeveloperName>
    <label>Unit Taken</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>