force-app/main/default/objects/PS_ASU_SP_CLASS_V__x/fields/VALID_ATTEMPT__c.field-meta.xml
<CustomField>
    <fullName>VALID_ATTEMPT__c</fullName>
    <description>Data sourced from PS_STDNT_ENRL.VALID_ATTEMPT</description>
    <externalDeveloperName>VALID_ATTEMPT</externalDeveloperName>
    <label>Valid Attempt</label>
    <length>1</length>
    <type>Text</type>
</CustomField>